    - Fix: The package was only uploaded if the target was "ubuntu".
  * Recommend bzr-builddeb (used by sponsor-patch for branches).
  * Add most dependencies to Build-Depends for successfully run the tests.
  * Recommend python-gnupginterface (used by dgetlp).
  * update-maintainer: Rewrite completely using python-debian (LP: #666504).

  [ Michael Vogt ]
  * add "add-patch" that provides the non-interactive version of
    edit-patch

 -- Stefano Rivera <stefanor@ubuntu.com>  Sun, 26 Dec 2010 21:56:07 +0200

ubuntu-dev-tools (0.108) experimental; urgency=low

  [ Stefano Rivera ]
  * lp-shell, import-bug-from-debian:
    Use the 'production' LP instance instead of 'edge' (which is going away).
  * pbuilder-dist:
    - Fix typo in local archive support, introduced in 0.107.
    - Warn user if they run sudo pbuilder-dist (LP: #691999).
  * Drop unnecessary debian/pycompat

  [ Benjamin Drung ]
  * pull-lp-source: Unquote URI to get "+" instead of "%2B" in the file name
    (LP: #681114).
  * sponsor-patch: Allow updating the build environment if the build failed.
  * ubuntu-iso: Exit nonzero rather than crash if a wrong parameter is passed
    (LP: #637020).

  [ Colin Watson ]
  * grep-merges: New tool.
  * ubuntu-iso(1): Fix typo.

  [ Evan Broder ]
  * backportpackage: new script for testing backport requests in a PPA.
  * sponsor-patch: Add --update option to make sure build environment is
    up to date (LP: #689605)

  [ Bilal Akhtar ]
  * pbuilder-dist: Override the default build result location if
    --buildresult is specified.
  * sponsor-patch: Support building with pbuilder-dist.

 -- Benjamin Drung <bdrung@ubuntu.com>  Sun, 19 Dec 2010 00:57:38 +0100

ubuntu-dev-tools (0.107) experimental; urgency=low

  [ Stefano Rivera ]
  * edit-patch: Detect quilt patch-system in 3.0 (quilt) packages without any
    patches yet.
  * wrap-and-sort:
    - Correct typo in options --wrap-allways -> --wrap-always
    - Sort debian/install as well as debian/*.install